Fixed these issues: Hide text area scrollbar. Render the next line on the enter press.

--- a/src/App.css
+++ b/src/App.css
@@ -171,6 +171,7 @@ span.checkmark img {
   }
   .user-msg {
     font-size: 15px;
+    white-space: pre-line;
   }
   .edited-msg {
     margin-left: 50px;
